--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
       <div class="nav-left">
         <ul>
           <li class="link">
-            <a href="home.html">
+            <a href="index.html">
               <img src="gambar/logo.png" alt="logo" />
             </a>
           </li>
           <li class="active">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li>
             <a href="#">Blog</a>
