--- a/navbar.html
+++ b/navbar.html
@@ -14,7 +14,7 @@
             <img src="gambar/logo.png" alt="logo" />
           </li>
           <li>
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li class="active">
             <a href="#">Blog</a>
