--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,12 @@
       <div class="nav-left">
         <ul>
           <li>
-            <a href="home.html">
+            <a href="index.html">
               <img src="gambar/logo.png" alt="logo" />
             </a>
           </li>
           <li>
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li>
             <a href="#">Blog</a>
